[package]
name = "espocrm-rs"
version = "0.2.1"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheDutchMC/espocrm-rs"
description = "A Rust implementation of the EspoCRM PHP API Client"
readme = "README.md"

[dependencies]
serde = "1.0.125"
reqwest = { version = "0.11.3", features = ["json"]}
hmac = "0.11.0"
base64 = "0.13.0"
urlencoding = "1.1.1"
sha2 = "0.9.4"

[dev-dependencies]
serde = { version = "1.0.125", features = ["derive"]}
