[package]
name = "espocrm-rs"
version = "0.4.1"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TobiasDeBruijn/espocrm-rs"
description = "A Rust implementation of the EspoCRM PHP API Client"
readme = "README.md"

[dependencies]
serde = "^1.0"
hmac = "^0.12"
base64 = "^0.13"
urlencoding = "^2.1"
sha2 = "^0.10"
tap = "1.0.1"

[dependencies.tracing]
version = "0.1.36"
optional = true

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json"]

[dev-dependencies.serde]
version = "^1.0"
features = ["derive"]
